# resume-agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: sample_details.md  sample_resume.tex
resume_agent/: __init__.py  __main__.py  agent.py  cli.py  compiler.py  library.py  tools.py
